--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "license": "ISC",              
+  "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
@@ -8,6 +8,8 @@
     "@coral-xyz/anchor": "^0.30.1"
   },
   "devDependencies": {
+    "@solana-developers/helpers": "2.3.0",
+    "@solana/spl-token": "^0.4.9",
     "@types/bn.js": "^5.1.0",
     "@types/jest": "^29.0.3",
     "jest": "^29.0.3",
